Tela de Gestão de Informações de Importação: mensagem de falha ao inserir arquivo excel vazio está aparecendo, sistema substitui arquivos iguais.

--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesImportacao/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesImportacao/Item.cshtml
@@ -81,11 +81,91 @@
 
         $('#form').validate({
             rules: {
-                PropostaComercial: { required: true, maxlength: 200 },
-                NumeroBooking: { required: true, maxlength: 200 },
-                NumeroBL: { required: true, maxlength: 200 }
+                PropostaComercial: {
+                    required: true,
+                    maxlength: 200,
+                    remote: {
+                        url: "/cms/@PortalAtual.Diretorio/GestaoInformacoesImportacao/isvalid",
+                        type: "post",
+                        async: false,
+                        loadingPanel: false,
+                        data: {
+                            id: function () {
+                                return $('input[name=Codigo]').val()
+                            },
+                            proposta: function () {
+                                return $('input[name=PropostaComercial]').val()
+                            },
+                            booking: function () {
+                                return $('input[name=NumeroBooking]').val()
+                            },
+                            numeroBL: function () {
+                                return $('input[name=NumeroBL]').val()
+                            }
+                        }
+                    }
+                },
+                NumeroBooking: {
+                    required: true,
+                    maxlength: 200,
+                    remote: {
+                        url: "/cms/@PortalAtual.Diretorio/GestaoInformacoesImportacao/isvalid",
+                        type: "post",
+                        async: false,
+                        loadingPanel: false,
+                        data: {
+                            id: function () {
+                                return $('input[name=Codigo]').val()
+                            },
+                            proposta: function () {
+                                return $('input[name=PropostaComercial]').val()
+                            },
+                            booking: function () {
+                                return $('input[name=NumeroBooking]').val()
+                            },
+                            numeroBL: function () {
+                                return $('input[name=NumeroBL]').val()
+                            }
+                        }
+                    }
+                },
+                NumeroBL: {
+                    required: true,
+                    maxlength: 200,
+                    remote: {
+                        url: "/cms/@PortalAtual.Diretorio/GestaoInformacoesImportacao/isvalid",
+                        type: "post",
+                        async: false,
+                        loadingPanel: false,
+                        data: {
+                            id: function () {
+                                return $('input[name=Codigo]').val()
+                            },
+                            proposta: function () {
+                                return $('input[name=PropostaComercial]').val()
+                            },
+                            booking: function () {
+                                return $('input[name=NumeroBooking]').val()
+                            },
+                            numeroBL: function () {
+                                return $('input[name=NumeroBL]').val()
+                            }
+                        }
+                    }
+                }
+            },
+            messages: {
+                PropostaComercial: {
+                    remote: "@TAdm("Essa proposta já existe")"
+                },
+                NumeroBooking: {
+                    remote: "@TAdm("Esse número do booking já existe")"
+                },
+                NumeroBL: {
+                    remote: "@TAdm("Esse número BL já existe")"
+                }
             }
-        });     
+        });
 
     </script>
 }
