--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
@@ -3,18 +3,19 @@
     Layout = "";
 }
 
-<div class="col-md-6">
+<div class="form-group col-md-24">
     <label>@T("Url Exportação")</label>
     <input type="text" class="form-control" name="UrlExportacao" id="UrlExportacao" placeholder="@T("Url Exportação")" value="@Model.UrlExportacao">
 </div>
-<div class="col-md-6">
+<div class="form-group col-md-24">
     <label>@T("Url Importação")</label>
     <input type="text" class="form-control" name="UrlImportacao" id="UrlImportacao" placeholder="@T("Url Importação")" value="@Model.UrlImportacao">
 </div>
-<div class="col-md-6">
-    <label>@T("Nome View")</label>
-    <select name="NomeModelo" class="form-control">
-        <option value="1">@T("Importação")</option>
-        <option value="2">@T("Exportação")</option>
+<div class="form-group col-md-24">
+    <label>@T("View")</label>
+    <select name="NomeView" class="form-control">
+        <option value="EscolherTipo" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("EscolherTipo") ? "selected" : "")>@T("EscolherTipo")</option>
+        <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Importacao") ? "selected" : "")>@T("Importação")</option>
+        <option value="Exportar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Exportacao") ? "selected" : "")>@T("Exportação")</option>
     </select>
 </div>
