--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
@@ -1,9 +1,11 @@
-﻿@model MLModuloAgendamentoIntermodal
+﻿@model MLAgendamentoIntermodal
 @{
     var estado = (List<MLEstado>)ViewData["estado"];
+
+    var baseUrl = "/portal/" + BLPortal.Atual.Diretorio;
 }
 
-<div class="box-agendamento">
+<div class="box-agendamento agendamentoJQ">
     <div class="box-header">
         <a href="javascript:history.back()" class="btn btn-link">
             <span class="icon icon-chevron-left"></span>
@@ -12,20 +14,28 @@
         <h2 class="box-title">@T("Exportação")</h2>
     </div>
 
-    <form class="form">
+    <form class="form" id="FormAgendamento">
         <div class="form-section">
+            <div id="mensagem"></div>
+            <input type="hidden" name="CodigoExportar" id="CodigoExportar" value="" />
             <h3 class="form-section__title">@T("Informações de Contato")</h3>
             <div class="row">
-                <div class="col-24 col-md-12">
+                <div class="col-24 col-md-8">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Nome Completo")</label>
-                        <input type="text" class="form-control is-invalid" placeholder="@T("Digite o nome do responsavel pela contratação")">
+                        <input type="text" class="form-control" required name="Nome" id="Nome" placeholder="@T("Digite o nome do responsavel pela contratação")">
                     </div>
                 </div>
-                <div class="col-24 col-md-12">
+                <div class="col-24 col-md-8">
                     <div class="form-group">
                         <label for="" class="form-label">E-mail</label>
-                        <input type="text" class="form-control" placeholder="@T("Digite o e-mail do responsável")">
+                        <input type="email" class="form-control" required name="Email" id="Email" placeholder="@T("Digite o e-mail do responsável")">
+                    </div>
+                </div>
+                <div class="col-24 col-md-8">
+                    <div class="form-group">
+                        <label for="" class="form-label">CNPJ</label>
+                        <input type="text" class="form-control" required name="CNPJ" id="CNPJ" onblur="validarCNPJ()" placeholder="@T("Digite o CNPJ")">
                     </div>
                 </div>
             </div>
@@ -36,29 +46,29 @@
                 <div class="col-24 col-md-10 col-lg-9 col-xl-7">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Proposta Comercial")</label>
-                        <input type="text" class="form-control" placeholder="@T("Digite o número da sua Proposta")">
+                        <input type="text" class="form-control" required name="PropostaComercial" id="PropostaComercial" placeholder="@T("Digite o número da sua Proposta")">
                     </div>
                 </div>
                 <div class="col-24 col-md-10 col-lg-9 col-xl-7">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Número do Booking")</label>
-                        <input type="text" class="form-control" placeholder="@T("Digite o número do Booking")">
+                        <input type="text" class="form-control" required name="NumeroBooking" id="NumeroBooking" placeholder="@T("Digite o número do Booking")">
                     </div>
                 </div>
             </div>
         </div>
         <div class="form-section">
-            <h3 class="form-section__title">Local de Coleta</h3>
+            <h3 class="form-section__title">@T("Local de Coleta")</h3>
             <div class="row">
                 <div class="col-24 col-sm-10 col-md-8 col-lg-6">
                     <div class="form-group">
                         <label for="" class="form-label">CEP</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="00000-000">
+                            <input type="text" id="CEP" name="CEP" required class="form-control" placeholder="00000-000">
                             <div class="input-group-append">
-                                <button class="btn btn-outline" type="button">
+                                <button class="btn btn-outline" id="btnBuscaCEP" type="button">
                                     <span class="icon icon-search"></span>
-                                    <span class="sr-only">Pesquisar</span>
+                                    <span class="sr-only">@T("Pesquisar")</span>
                                 </button>
                             </div>
                         </div>
@@ -67,32 +77,32 @@
                 <div class="col-24 col-md-8 col-lg-12">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Endereço")</label>
-                        <input type="text" class="form-control">
+                        <input type="text" id="Endereco" name="Endereco" placeholder="@T("Digite o Endereço")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-md-8 col-lg-6">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Complemento")</label>
-                        <input type="text" class="form-control">
+                        <input type="text" id="Complemento" name="Complemento" placeholder="@T("Digite o Complemento")" class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-md-8 col-lg-6 col-xl-8">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Bairro")</label>
-                        <input type="text" class="form-control">
+                        <input type="text" id="Bairro" name="Bairro" placeholder="@T("Digite o Bairro")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-md-8 col-lg-12 col-xl-8">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Cidade")</label>
-                        <input type="text" class="form-control">
+                        <input type="text" id="Cidade" name="Cidade" placeholder="@T("Digite a Cidade")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-md-8 col-lg-6 col-xl-8">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Estado")</label>
-                        <select name="" id="" class="form-control">
-                            <option value="">Selecione</option>
+                        <select id="Estado" name="Estado" required class="form-control">
+                            <option value="">@T("Selecione")</option>
                             @foreach (var item in estado)
                             {
                                 <option value="@item.Uf">@item.Nome</option>
@@ -102,13 +112,22 @@
                 </div>
             </div>
         </div>
-        <div class="form-section">
+        <div class="form-section" id="divSalvar">
             <div class="form-group text-center">
-                <a href="#" class="btn btn-red btn-lg btn-icon">
+                <a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnSalvarJQ">
                     <span class="icon icon-chevron-right"></span>
                     @T("Agendar Containers")
                 </a>
             </div>
         </div>
     </form>
+
+    @Html.Action("ExportarCarga", "AgendamentoIntermodal", new { model = Model })
 </div>
+
+@Html.Action("ExportarSucesso", "AgendamentoIntermodal", new { model = Model })
+
+@{
+    BLConteudo.AdicionarJavaScript(Html.Action("Script", new { model = Model }));
+    BLConteudo.AdicionarJavaScript(Html.Action("ScriptCarga", new { model = Model }));
+}
