--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -60,6 +60,15 @@
                 </div>
             </div>
         </div>
+        <div class="divExclusao">
+            <input type="hidden" name="CodigoExcluir" id="CodigoExcluir" value="" />
+            <p>Deseja realmente excluir?</p>
+            <a href="javascript:void(0)" class="btnExcluirJQ">@T("Sim")</a>
+            <a href="javascript:void(0)" class="btnNaoExcluirJQ">@T("Não")</a>
+        </div>
+        <div class="mensagemExclusao">
+            <p>Registro excluído com sucesso.</p>
+        </div>
         <div class="table-responsive" id="divRegistrosCargas">
             <table class="table">
                 <tbody>
@@ -69,9 +78,8 @@
         </div>
     </div>
 </form>
-
 <div class="form-group text-center">
-    <a href="#" class="btn btn-red btn-lg btn-icon btnAgendarJQ">
+    <a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnAgendarJQ">
         <span class="icon icon-truck"></span>
         @T("Agendar Coleta")
     </a>
