--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarSucesso.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarSucesso.cshtml
@@ -1,78 +1,10 @@
 ﻿@model MLAgendamentoIntermodal
-@{
-}
 
-<form class="form" id="FormCarga">
-    <div class="form-section" id="divCarga">
-        <h3 class="form-section__title">@T("Informações de Carga")</h3>
-        <div class="row justify-content-center">
-            <div class="col-24 col-md-9 col-xl-6">
-                <div class="form-group">
-                    <label for="" class="form-label">@T("Data e hora da Coleta")</label>
-                    <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T00:00" id="DataColeta" name="DataColeta" required class="form-control" placeholder="@T("Digite o número da sua Proposta")">
-                </div>
-            </div>
-            <div class="col-24 col-md-6 col-xl-5">
-                <div class="form-group">
-                    <label for="" class="form-label">@T("Peso (kg)")</label>
-                    <input type="number" id="Peso" name="Peso" min="1" class="form-control" required placeholder="@T("Peso")">
-                </div>
-            </div>
-            <div class="col-24 col-md-6 col-xl-5">
-                <div class="form-group">
-                    <label for="" class="form-label">@T("Equipamento")</label>
-                    <select id="Equipamento" name="Equipamento" required class="form-control">
-                        <option value="">@T("Selecione")</option>
-                        <option value="20DC">@T("20DC")</option>
-                        <option value="40DC">@T("40DC")</option>
-                        <option value="40HC">@T("40HC")</option>
-                        <option value="40RH">@T("40RH")</option>
-                        <option value="20RF">@T("20RF")</option>
-                        <option value="20FT">@T("20FT")</option>
-                        <option value="40FT">@T("40FT")</option>
-                        <option value="40FH">@T("40FH")</option>
-                        <option value="20OP">@T("20OP")</option>
-                        <option value="40OP">@T("40OP")</option>
-                        <option value="40OH">@T("40OH")</option>
-                        <option value="20TK">@T("20TK")</option>
-                        <option value="40TK">@T("40TK")</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-24 col-md-6 col-xl-5">
-                <div class="form-group">
-                    <label for="" class="form-label">@T("Reefer")</label>
-                    <input type="checkbox" id="Reefer" name="Reefer" class="form-control" placeholder="@T("Reefer")">
-                </div>
-            </div>
-            <div class="col-24 col-md-6 col-xl-5">
-                <div class="form-group">
-                    <label for="" class="form-label">@T("Comentario")</label>
-                    <input type="text" id="Comentario" name="Comentario" class="form-control" placeholder="@T("Comentario")">
-                </div>
-            </div>
-            <div class="col-24 col-md-9 col-xl-6 d-flex align-items-end">
-                <div class="form-group form-group--btn">
-                    <a href="javascript:void(0)" class="btn btn-darkgray btn-block btn-icon btnSalvarCargaJQ">
-                        <span class="icon icon-plus"></span>
-                        @T("Registrar Container")
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="table-responsive" id="divRegistrosCargas">
-            <table class="table">
-                <tbody>
-                   
-                </tbody>
-            </table>
-        </div>
-    </div>
-</form>
-
-<div class="form-group text-center">
-    <a href="#" class="btn btn-red btn-lg btn-icon btnAgendarJQ">
-        <span class="icon icon-truck"></span>
-        @T("Agendar Coleta")
-    </a>
+<div class="box-agendamento box-agendamento--success sucessoJQ">
+    <h2 class="success-title">@T("Envio efetuado com sucesso!")</h2>
+    <p>
+        Quisque a eros quam. Pellentesque egestas finibus porttitor.<br>
+        Praesent fermentum lorem nec euismod euismod. Vivamus lacinia ex at arcu pulvinar, non tincidunt velit viverra.
+    </p>
+    <a href="javascript:void(0)" class="btn btn-red btn-lg reloadJQ">@T("Fazer um novo Agendamento")</a>
 </div>
